<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_builds"
        android:icon="@drawable/ic_nav_build"
        android:title="@string/nav_builds" />
    <item
        android:id="@+id/nav_ai"
        android:icon="@drawable/ic_nav_psychology"
        android:title="@string/nav_ai" />
    <item
        android:id="@+id/nav_social"
        android:icon="@drawable/ic_nav_groups"
        android:title="@string/nav_social" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_person"
        android:title="@string/nav_profile" />
</menu>
